--- a/.github/workflows/static-validate.yml
+++ b/.github/workflows/static-validate.yml
@@ -1,10 +1,9 @@
 name: Static Validation
 
 on:
-  push:
-    branches: [$default-branch]
-  pull_request:
-    branches: [$default-branch]
+  # This is cheap enough, just run it.
+  push: {}
+  pull_request: {}
   workflow_dispatch: {}
 
 jobs:
