--- a/grafana/templates/github-data-source-secret.yaml
+++ b/grafana/templates/github-data-source-secret.yaml
@@ -6,4 +6,4 @@ metadata:
     grafana_datasource: "1"
 type: Opaque
 spec:
-  itemPath: "vaults/tales-secrets/items/tales-grafana-github-token"
+  itemPath: vaults/tales-secrets/items/tales-grafana-github-token
