--- a/jupyterhub/templates/ghcr-pull-secret.yaml
+++ b/jupyterhub/templates/ghcr-pull-secret.yaml
@@ -4,4 +4,4 @@ metadata:
   name: ghcr-pull-secret
 type: kubernetes.io/dockerconfigjson
 spec:
-  itemPath: "vaults/tales-secrets/items/jupyterhub-github-token"
+  itemPath: vaults/tales-secrets/items/jupyterhub-github-token
