--- a/jupyterhub/templates/google-oauth-secret.yaml
+++ b/jupyterhub/templates/google-oauth-secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: onepassword.com/v1
 kind: OnePasswordItem
 metadata:
-    name: google-oauth-secret
+  name: google-oauth-secret
 type: Opaque
 spec:
-    itemPath: "vaults/tales-secrets/items/jupyterhub-oauth-client"
+  itemPath: vaults/tales-secrets/items/jupyterhub-oauth-client
