--- a/kubernetes-dashboard/templates/admin-sa.yaml
+++ b/kubernetes-dashboard/templates/admin-sa.yaml
@@ -23,5 +23,5 @@ metadata:
   name: admin-user
   namespace: kubernetes-dashboard
   annotations:
-    kubernetes.io/service-account.name: "admin-user"
+    kubernetes.io/service-account.name: admin-user
 type: kubernetes.io/service-account-token
