--- a/mimir/values.yaml
+++ b/mimir/values.yaml
@@ -13,7 +13,6 @@ global:
     - name: ca-certificates
       mountPath: /etc/ssl/certs
       readOnly: true
-
 mimir-distributed:
   # We have minio at home.
   minio:
@@ -84,16 +83,14 @@ mimir-distributed:
           backend: s3
           s3:
             endpoint: minio.tales-tenant.svc
-            access_key_id: "${ACCESS_KEY_ID}"
-            secret_access_key: "${SECRET_ACCESS_KEY}"
+            access_key_id: ${ACCESS_KEY_ID}
+            secret_access_key: ${SECRET_ACCESS_KEY}
       blocks_storage:
         s3:
           bucket_name: mimir-blocks
-
       alertmanager_storage:
         s3:
           bucket_name: mimir-alertmanager
-
       ruler_storage:
         s3:
           bucket_name: mimir-ruler
