--- a/alloy/Chart.yaml
+++ b/alloy/Chart.yaml
@@ -2,10 +2,8 @@ apiVersion: v2
 name: alloy
 description: alloy
 type: application
-
 version: 0.1.0
-appVersion: "0.1.0"
-
+appVersion: 0.1.0
 dependencies:
   - name: k8s-monitoring
     version: ~2.0
