--- a/alloy/application.yaml
+++ b/alloy/application.yaml
@@ -26,6 +26,6 @@ spec:
       - ServerSideApply=true
     managedNamespaceMetadata:
       labels:
-        "pod-security.kubernetes.io/enforce": privileged
-        "pod-security.kubernetes.io/warn": privileged
-        "trust-bundle": "enabled"
+        pod-security.kubernetes.io/enforce: privileged
+        pod-security.kubernetes.io/warn: privileged
+        trust-bundle: enabled
