--- a/alloy/values.yaml
+++ b/alloy/values.yaml
@@ -10,7 +10,6 @@ global:
     - name: ca-certificates
       mountPath: /etc/ssl/certs
       readOnly: true
-
 k8s-monitoring:
   cluster:
     name: tales
@@ -21,7 +20,6 @@ k8s-monitoring:
     - name: localLoki
       type: loki
       url: http://loki-gateway.loki.svc/loki/api/v1/push
-
   # https://github.com/grafana/k8s-monitoring-helm/blob/main/charts/k8s-monitoring/charts/feature-cluster-metrics/values.yaml
   clusterMetrics:
     enabled: true
@@ -80,7 +78,6 @@ k8s-monitoring:
         # /var/log/pods and /var/log/containers exist. (Also audit.)
         varlog: true
         dockercontainers: false
-
   alloy-receiver:
     enabled: false
     serviceMonitor:
@@ -91,7 +88,10 @@ k8s-monitoring:
         - name: alloy
           namespace: alloy
           labelSelectors:
-            app.kubernetes.io/name: [alloy-metrics, alloy-singleton, alloy-logs]
+            app.kubernetes.io/name:
+              - alloy-metrics
+              - alloy-singleton
+              - alloy-logs
     cert-manager:
       instances:
         - name: cert-manager
