--- a/cert-manager/templates/ca-bundle.yaml
+++ b/cert-manager/templates/ca-bundle.yaml
@@ -1,16 +1,17 @@
 apiVersion: trust.cert-manager.io/v1alpha1
 kind: Bundle
 metadata:
-  name: trust-bundle  # The bundle name will also be used for the target
+  # The bundle name will also be used for the target
+  name: trust-bundle
 spec:
   sources:
-  - useDefaultCAs: true
-  - secret:
-      name: tales-ca-tls
-      key: "ca.crt"
+    - useDefaultCAs: true
+    - secret:
+        name: tales-ca-tls
+        key: ca.crt
   target:
     configMap:
-      key: "ca-certificates.crt"
+      key: ca-certificates.crt
     namespaceSelector:
       matchLabels:
-        trust-bundle: "enabled"
+        trust-bundle: enabled
