--- a/cert-manager/templates/clouddns-sa-secret.yaml
+++ b/cert-manager/templates/clouddns-sa-secret.yaml
@@ -2,7 +2,6 @@ apiVersion: onepassword.com/v1
 kind: OnePasswordItem
 metadata:
   name: clouddns-sa
-  namespace: {{ .Release.Namespace }}
 type: Opaque
 spec:
-  itemPath: "vaults/tales-secrets/items/cert-manager-clouddns-sa"
+  itemPath: vaults/tales-secrets/items/cert-manager-clouddns-sa
