--- a/cilium/templates/additional-manifests.yaml
+++ b/cilium/templates/additional-manifests.yaml
@@ -1,14 +1,14 @@
-apiVersion: "cilium.io/v2alpha1"
+apiVersion: cilium.io/v2alpha1
 kind: CiliumLoadBalancerIPPool
 metadata:
-  name: "lb-externalip-pool"
+  name: lb-externalip-pool
 spec:
   blocks:
     # 10.0.4.0/23 and 10.0.6.0/23 are the internal Pod and Service ranges in
     # talos/talos-patch-all.yaml
-    - cidr: "10.0.8.0/24"
+    - cidr: 10.0.8.0/24
 ---
-apiVersion: "cilium.io/v2alpha1"
+apiVersion: cilium.io/v2alpha1
 kind: CiliumL2AnnouncementPolicy
 metadata:
   name: announce-everything
