--- a/directpv/manifests.yaml
+++ b/directpv/manifests.yaml
@@ -15,7 +15,6 @@ metadata:
   name: directpv
 spec: {}
 status: {}
-
 ---
 apiVersion: v1
 kind: ServiceAccount
@@ -30,7 +29,6 @@ metadata:
     directpv.min.io/version: v1beta1
   name: directpv-min-io
   namespace: directpv
-
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
@@ -202,7 +200,6 @@ rules:
       - get
       - list
       - watch
-
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
@@ -225,7 +222,6 @@ subjects:
   - kind: ServiceAccount
     name: directpv-min-io
     namespace: directpv
-
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
@@ -253,7 +249,6 @@ rules:
       - list
       - update
       - watch
-
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
@@ -277,7 +272,6 @@ subjects:
   - kind: ServiceAccount
     name: directpv-min-io
     namespace: directpv
-
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
@@ -337,17 +331,24 @@ spec:
                   type: integer
                 conditions:
                   items:
-                    description:
-                      "Condition contains details for one aspect of the current
-                      state of this API Resource.\n---\nThis struct is intended for
-                      direct use as an array at the field path .status.conditions.  For
-                      example,\n\n\n\ttype FooStatus struct{\n\t    // Represents the
-                      observations of a foo's current state.\n\t    // Known .status.conditions.type
-                      are: \"Available\", \"Progressing\", and \"Degraded\"\n\t    //
-                      +patchMergeKey=type\n\t    // +patchStrategy=merge\n\t    // +listType=map\n\t
-                      \   // +listMapKey=type\n\t    Conditions []metav1.Condition `json:\"conditions,omitempty\"
-                      patchStrategy:\"merge\" patchMergeKey:\"type\" protobuf:\"bytes,1,rep,name=conditions\"`\n\n\n\t
-                      \   // other fields\n\t}"
+                    description: |-
+                      Condition contains details for one aspect of the current state of this API Resource.
+                      ---
+                      This struct is intended for direct use as an array at the field path .status.conditions.  For example,
+
+
+                      	type FooStatus struct{
+                      	    // Represents the observations of a foo's current state.
+                      	    // Known .status.conditions.type are: "Available", "Progressing", and "Degraded"
+                      	    // +patchMergeKey=type
+                      	    // +patchStrategy=merge
+                      	    // +listType=map
+                      	    // +listMapKey=type
+                      	    Conditions []metav1.Condition `json:"conditions,omitempty" patchStrategy:"merge" patchMergeKey:"type" protobuf:"bytes,1,rep,name=conditions"`
+
+
+                      	    // other fields
+                      	}
                     properties:
                       lastTransitionTime:
                         description: |-
@@ -445,7 +446,6 @@ status:
     plural: ""
   conditions: null
   storedVersions: null
-
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
@@ -497,17 +497,24 @@ spec:
                   type: integer
                 conditions:
                   items:
-                    description:
-                      "Condition contains details for one aspect of the current
-                      state of this API Resource.\n---\nThis struct is intended for
-                      direct use as an array at the field path .status.conditions.  For
-                      example,\n\n\n\ttype FooStatus struct{\n\t    // Represents the
-                      observations of a foo's current state.\n\t    // Known .status.conditions.type
-                      are: \"Available\", \"Progressing\", and \"Degraded\"\n\t    //
-                      +patchMergeKey=type\n\t    // +patchStrategy=merge\n\t    // +listType=map\n\t
-                      \   // +listMapKey=type\n\t    Conditions []metav1.Condition `json:\"conditions,omitempty\"
-                      patchStrategy:\"merge\" patchMergeKey:\"type\" protobuf:\"bytes,1,rep,name=conditions\"`\n\n\n\t
-                      \   // other fields\n\t}"
+                    description: |-
+                      Condition contains details for one aspect of the current state of this API Resource.
+                      ---
+                      This struct is intended for direct use as an array at the field path .status.conditions.  For example,
+
+
+                      	type FooStatus struct{
+                      	    // Represents the observations of a foo's current state.
+                      	    // Known .status.conditions.type are: "Available", "Progressing", and "Degraded"
+                      	    // +patchMergeKey=type
+                      	    // +patchStrategy=merge
+                      	    // +listType=map
+                      	    // +listMapKey=type
+                      	    Conditions []metav1.Condition `json:"conditions,omitempty" patchStrategy:"merge" patchMergeKey:"type" protobuf:"bytes,1,rep,name=conditions"`
+
+
+                      	    // other fields
+                      	}
                     properties:
                       lastTransitionTime:
                         description: |-
@@ -607,7 +614,6 @@ status:
     plural: ""
   conditions: null
   storedVersions: null
-
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
@@ -662,17 +668,24 @@ spec:
               properties:
                 conditions:
                   items:
-                    description:
-                      "Condition contains details for one aspect of the current
-                      state of this API Resource.\n---\nThis struct is intended for
-                      direct use as an array at the field path .status.conditions.  For
-                      example,\n\n\n\ttype FooStatus struct{\n\t    // Represents the
-                      observations of a foo's current state.\n\t    // Known .status.conditions.type
-                      are: \"Available\", \"Progressing\", and \"Degraded\"\n\t    //
-                      +patchMergeKey=type\n\t    // +patchStrategy=merge\n\t    // +listType=map\n\t
-                      \   // +listMapKey=type\n\t    Conditions []metav1.Condition `json:\"conditions,omitempty\"
-                      patchStrategy:\"merge\" patchMergeKey:\"type\" protobuf:\"bytes,1,rep,name=conditions\"`\n\n\n\t
-                      \   // other fields\n\t}"
+                    description: |-
+                      Condition contains details for one aspect of the current state of this API Resource.
+                      ---
+                      This struct is intended for direct use as an array at the field path .status.conditions.  For example,
+
+
+                      	type FooStatus struct{
+                      	    // Represents the observations of a foo's current state.
+                      	    // Known .status.conditions.type are: "Available", "Progressing", and "Degraded"
+                      	    // +patchMergeKey=type
+                      	    // +patchStrategy=merge
+                      	    // +listType=map
+                      	    // +listMapKey=type
+                      	    Conditions []metav1.Condition `json:"conditions,omitempty" patchStrategy:"merge" patchMergeKey:"type" protobuf:"bytes,1,rep,name=conditions"`
+
+
+                      	    // other fields
+                      	}
                     properties:
                       lastTransitionTime:
                         description: |-
@@ -777,7 +790,6 @@ status:
     plural: ""
   conditions: null
   storedVersions: null
-
 ---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
@@ -880,7 +892,6 @@ status:
     plural: ""
   conditions: null
   storedVersions: null
-
 ---
 apiVersion: storage.k8s.io/v1
 kind: CSIDriver
@@ -900,7 +911,6 @@ spec:
   volumeLifecycleModes:
     - Persistent
     - Ephemeral
-
 ---
 allowVolumeExpansion: true
 allowedTopologies:
@@ -927,7 +937,6 @@ parameters:
 provisioner: directpv-min-io
 reclaimPolicy: Delete
 volumeBindingMode: WaitForFirstConsumer
-
 ---
 apiVersion: apps/v1
 kind: DaemonSet
@@ -1159,7 +1168,6 @@ spec:
           name: run-udev-data-dir
   updateStrategy:
     type: RollingUpdate
-
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -1279,5 +1287,5 @@ spec:
             path: /var/lib/kubelet/plugins/controller-controller
             type: DirectoryOrCreate
           name: socket-dir
-
 ---
+
