--- a/grafana/templates/grafana-admin-user.yaml
+++ b/grafana/templates/grafana-admin-user.yaml
@@ -4,4 +4,4 @@ metadata:
   name: grafana-admin-user
 type: Opaque
 spec:
-  itemPath: "vaults/tales-secrets/items/grafana-admin-user"
+  itemPath: vaults/tales-secrets/items/grafana-admin-user
