--- a/grafana/values.yaml
+++ b/grafana/values.yaml
@@ -13,7 +13,6 @@ global:
     - name: ca-certificates
       mountPath: /etc/ssl/certs
       readOnly: true
-
 grafana:
   # https://github.com/grafana/helm-charts/blob/grafana-8.13.1/charts/grafana/values.yaml
   configMapAnnotations:
@@ -31,26 +30,23 @@ grafana:
           - borgmon.local.symmatree.com
   persistence:
     enabled: true
-
   admin:
-    existingSecret: "grafana-admin-user"
+    existingSecret: grafana-admin-user
     userKey: username
     passwordKey: password
-
   plugins:
     - grafana-github-datasource
     - grafana-lokiexplore-app
     # - grafana-metricsdrilldown-app
     # - grafana-mqtt-datasource
-
   sidecar:
     dashboards:
       enabled: true
       searchNamespace: ALL
-      folderAnnotation: "k8s-sidecar-target-directory"
+      folderAnnotation: k8s-sidecar-target-directory
       provider:
-        folderUid: "sidecar"
-        folder: "Sidecar"
+        folderUid: sidecar
+        folder: Sidecar
         allowUiUpdates: true
         foldersFromFilesStructure: true
     datasources:
