--- a/jupyterhub/docker/install-tools.ansible.yaml
+++ b/jupyterhub/docker/install-tools.ansible.yaml
@@ -8,8 +8,7 @@
       register: dpkg_arch
       changed_when: false
     - set_fact:
-        dpkg_arch: "{{ dpkg_arch.stdout }}"
-
+        dpkg_arch: '{{ dpkg_arch.stdout }}'
     - name: Install initial packages
       apt:
         name:
@@ -27,43 +26,48 @@
         state: present
         update_cache: yes
         cache_valid_time: 3600
-
     - name: Kubernetes repository
       deb822_repository:
         name: kubernetes
-        uris: "https://pkgs.k8s.io/core:/stable:/v1.32/deb/"
-        signed_by: "https://pkgs.k8s.io/core:/stable:/v1.32/deb/Release.key"
-        suites: ["/"]
+        uris: https://pkgs.k8s.io/core:/stable:/v1.32/deb/
+        signed_by: https://pkgs.k8s.io/core:/stable:/v1.32/deb/Release.key
+        suites:
+          - /
         state: present
         enabled: true
     - name: 1Password repository
       deb822_repository:
         name: 1password
-        uris: "https://downloads.1password.com/linux/debian/{{ dpkg_arch }}"
-        signed_by: "https://downloads.1password.com/linux/keys/1password.asc"
-        suites: ["stable"]
-        components: ["main"]
+        uris: https://downloads.1password.com/linux/debian/{{ dpkg_arch }}
+        signed_by: https://downloads.1password.com/linux/keys/1password.asc
+        suites:
+          - stable
+        components:
+          - main
         state: present
         enabled: true
     - name: GCloud repository
       deb822_repository:
         name: gcloud
-        uris: "https://packages.cloud.google.com/apt"
-        signed_by: "https://packages.cloud.google.com/apt/doc/apt-key.gpg"
-        suites: ["cloud-sdk"]
-        components: ["main"]
+        uris: https://packages.cloud.google.com/apt
+        signed_by: https://packages.cloud.google.com/apt/doc/apt-key.gpg
+        suites:
+          - cloud-sdk
+        components:
+          - main
         state: present
         enabled: true
     - name: GitHub CLI repository
       deb822_repository:
         name: github-cli
-        uris: "https://cli.github.com/packages"
-        signed_by: "https://cli.github.com/packages/githubcli-archive-keyring.gpg"
-        suites: ["stable"]
-        components: ["main"]
+        uris: https://cli.github.com/packages
+        signed_by: https://cli.github.com/packages/githubcli-archive-keyring.gpg
+        suites:
+          - stable
+        components:
+          - main
         state: present
         enabled: true
-
     - name: Install software
       apt:
         name:
@@ -99,12 +103,10 @@
         state: present
         # No cache_valid_time since we just changed the repos.
         update_cache: yes
-
     - name: Check if Homebrew is already installed
       stat:
         path: /home/linuxbrew/.linuxbrew/bin/brew
       register: brew_stat
-
     - name: Install Homebrew
       become: no
       shell: |
@@ -112,14 +114,12 @@
       args:
         creates: /home/linuxbrew/.linuxbrew/bin/brew
       when: not brew_stat.stat.exists
-
     - name: Add Homebrew to PATH for all users
       lineinfile:
         path: /etc/profile.d/brew.sh
-        line: 'eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)"'
+        line: eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv)"
         create: yes
         state: present
-
     - name: Install golang 1.24.1
       shell: |
         curl -LO "https://go.dev/dl/go1.24.1.linux-{{ dpkg_arch }}.tar.gz"
@@ -127,7 +127,6 @@
         rm go1.24.1.linux-{{ dpkg_arch }}.tar.gz
       args:
         creates: /usr/local/go/bin/go
-
     - name: Install Homebrew packages
       become: false
       community.general.homebrew:
@@ -141,12 +140,10 @@
         state: present
         # update_homebrew: true
         # upgrade_all: true
-
     - name: Check if VSCode is already installed
       stat:
         path: /usr/bin/code
       register: code_stat
-
     - name: Install vscode
       when: not code_stat.stat.exists
       block:
