--- a/jupyterhub/templates/ssh-secret.yaml
+++ b/jupyterhub/templates/ssh-secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: onepassword.com/v1
 kind: OnePasswordItem
 metadata:
-    name: ssh-secret
+  name: ssh-secret
 type: Opaque
 spec:
-    itemPath: "vaults/tales-secrets/items/jupyterhub-ssh-key"
+  itemPath: vaults/tales-secrets/items/jupyterhub-ssh-key
