--- a/kubernetes-dashboard/application.yaml
+++ b/kubernetes-dashboard/application.yaml
@@ -28,4 +28,4 @@ spec:
       - ServerSideApply=true
     managedNamespaceMetadata:
       labels:
-        "pod-security.kubernetes.io/warn": baseline
+        pod-security.kubernetes.io/warn: baseline
