--- a/loki/values.yaml
+++ b/loki/values.yaml
@@ -13,7 +13,6 @@ global:
     - name: ca-certificates
       mountPath: /etc/ssl/certs
       readOnly: true
-
 loki:
   # Ugh this is only because the chart will not let us avoid
   # setting this, which would otherwise be injected just fine by alloy.
@@ -43,7 +42,6 @@ loki:
       volume_enabled: true
     ruler:
       enable_api: true
-
     storage:
       bucketNames:
         chunks: loki-chunks
@@ -56,10 +54,9 @@ loki:
         endpoint: https://minio.tales-tenant.svc
         # For unclear reasons the Kubernetes dollar-paren syntax is not
         # expanded but this is Loki's native expansion syntax with config.expand-env=true
-        secretAccessKey: "${SECRET_ACCESS_KEY}"
-        accessKeyId: "${ACCESS_KEY_ID}"
+        secretAccessKey: ${SECRET_ACCESS_KEY}
+        accessKeyId: ${ACCESS_KEY_ID}
         s3ForcePathStyle: true
-
   # We have minio at home.
   minio:
     enabled: false
@@ -68,7 +65,6 @@ loki:
   chunksCache:
     # in MB
     allocatedMemory: 512
-
   monitoring:
     dashboards:
       enabled: true
@@ -80,13 +76,12 @@ loki:
       enabled: true
     selfMonitoring:
       enabled: false
-
   deploymentMode: SingleBinary
   singleBinary:
     replicas: 1
     persistence:
       enableStatefulSetAutoDeletePVC: true
-      size: "10Gi"
+      size: 10Gi
     extraArgs:
       - -log-config-reverse-order
       - -config.expand-env=true
@@ -104,7 +99,6 @@ loki:
       - name: ca-certificates
         mountPath: /etc/ssl/certs
         readOnly: true
-
   # Zero out replica counts of other deployment modes
   backend:
     replicas: 0
@@ -112,7 +106,6 @@ loki:
     replicas: 0
   write:
     replicas: 0
-
   ingester:
     replicas: 0
   querier:
