--- a/mimir/Chart.yaml
+++ b/mimir/Chart.yaml
@@ -2,11 +2,9 @@ apiVersion: v2
 name: mimir
 description: mimir
 type: application
-
 version: 0.1.0
-appVersion: "0.1.0"
-
+appVersion: 0.1.0
 dependencies:
   - name: mimir-distributed
-    repository: "https://grafana.github.io/helm-charts"
+    repository: https://grafana.github.io/helm-charts
     version: ~5.7
