--- a/minio-operator/application.yaml
+++ b/minio-operator/application.yaml
@@ -26,5 +26,5 @@ spec:
       - ServerSideApply=true
     managedNamespaceMetadata:
       labels:
-        "pod-security.kubernetes.io/warn": baseline
-        "kubernetes.io/metadata.name": minio-operator
+        pod-security.kubernetes.io/warn: baseline
+        kubernetes.io/metadata.name: minio-operator
