--- a/tales-tenant/templates/tales-tenant-cert.yaml
+++ b/tales-tenant/templates/tales-tenant-cert.yaml
@@ -5,9 +5,9 @@ metadata:
   namespace: tales-tenant
 spec:
   dnsNames:
-    - "minio.tales-tenant"
-    - "minio.tales-tenant.svc"
-    - 'minio.tales-tenant.svc.cluster.local'
+    - minio.tales-tenant
+    - minio.tales-tenant.svc
+    - minio.tales-tenant.svc.cluster.local
     - '*.minio.tales-tenant.svc.cluster.local'
     - '*.tales-tenant-hl.tales-tenant.svc.cluster.local'
     - '*.tales-tenant.minio.tales-tenant.svc.cluster.local'
@@ -18,7 +18,6 @@ spec:
     name: tales-ca-issuer
     kind: ClusterIssuer
     group: cert-manager.io
-
 ---
 # Use trust-manager to inject just the public key.
 apiVersion: trust.cert-manager.io/v1alpha1
@@ -27,12 +26,12 @@ metadata:
   name: tales-tenant-ca-tls
 spec:
   sources:
-  - secret:
-      name: tales-ca-tls
-      key: "ca.crt"
+    - secret:
+        name: tales-ca-tls
+        key: ca.crt
   target:
     secret:
-      key: "ca.crt"
+      key: ca.crt
     namespaceSelector:
       matchLabels:
-        "kubernetes.io/metadata.name": tales-tenant
+        kubernetes.io/metadata.name: tales-tenant
