Fix tanka validation, improve formatting.

--- a/.github/workflows/static-validate.yml
+++ b/.github/workflows/static-validate.yml
@@ -62,7 +62,8 @@ jobs:
             tk fmt -v -t .
             jb update
             #  -ignore-missing-schemas
-            tk show environments/default \
+            tk show --dangerous-allow-redirect \
+              environments/default  \
               | kubeconform -cache "${{ runner.temp }}/cache/kubeconform" -strict -summary
             popd
           done
