--- a/cilium/values.yaml
+++ b/cilium/values.yaml
@@ -165,7 +165,7 @@ cilium:
         enabled: true
         port: 9966
         serviceMonitor:
-          # -- Enable service monitors.
+          trustCRDsExist: true
           enabled: true
     ui:
       # -- Whether to enable the Hubble UI.
@@ -238,6 +238,7 @@ cilium:
     metricsService: true
     enabled: true
     serviceMonitor:
+      trustCRDsExist: true
       enabled: true
   dashboards:
     enabled: true
@@ -253,6 +254,7 @@ cilium:
       enabled: true
       serviceMonitor:
         enabled: true
+        trustCRDsExist: true
   # -- Configure TLS configuration in the agent.
   tls:
     readSecretsOnlyFromSecretsNamespace: true
@@ -267,6 +269,7 @@ cilium:
       enabled: true
       serviceMonitor:
         enabled: true
+        trustCRDsExist: true
     dashboards:
       enabled: true
   # -- Configure cgroup related configuration
