Helm lint does not accept apiVersions so back to squelch

--- a/.github/workflows/static-validate.yml
+++ b/.github/workflows/static-validate.yml
@@ -79,7 +79,7 @@ jobs:
             echo "Checking chart: $chart"
             pushd "$chart"
             helm dep build
-            ${{ github.workspace }}/ci-tools/helm.sh lint .
+            helm lint .
             ${{ github.workspace }}/ci-tools/helm.sh template --dry-run=client . \
               | ${{ github.workspace }}/ci-tools/kubeconform.sh
             popd
