--- a/cilium/values.yaml
+++ b/cilium/values.yaml
@@ -165,6 +165,7 @@ cilium:
         enabled: true
         port: 9966
         serviceMonitor:
+          trustCRDsExist: true
           enabled: true
     ui:
       # -- Whether to enable the Hubble UI.
@@ -237,6 +238,7 @@ cilium:
     metricsService: true
     enabled: true
     serviceMonitor:
+      trustCRDsExist: true
       enabled: true
   dashboards:
     enabled: true
@@ -252,6 +254,7 @@ cilium:
       enabled: true
       serviceMonitor:
         enabled: true
+        trustCRDsExist: true
   # -- Configure TLS configuration in the agent.
   tls:
     readSecretsOnlyFromSecretsNamespace: true
@@ -266,6 +269,7 @@ cilium:
       enabled: true
       serviceMonitor:
         enabled: true
+        trustCRDsExist: true
     dashboards:
       enabled: true
   # -- Configure cgroup related configuration
