--- a/.github/workflows/static-validate.yml
+++ b/.github/workflows/static-validate.yml
@@ -2,7 +2,7 @@ name: Static Validation
 on:
   # This is cheap enough, just run it.
   push: {}
-  pull_request: {}
+  # pull_request: {}
   workflow_dispatch: {}
 jobs:
   build:
