Renamed job since that is used as the Check name

--- a/.github/workflows/static-validate.yml
+++ b/.github/workflows/static-validate.yml
@@ -5,7 +5,8 @@ on:
   # pull_request: {}
   workflow_dispatch: {}
 jobs:
-  build:
+  static-validate:
+    name: Static Validation
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
